app/client/style.css
@import url('https://fonts.googleapis.com/css?family=Poppins');

.white-text{
  color: white;
}

.messageBox{
  padding-bottom: 15px;
}

.blue-background{
  background-color: #3469CA;
}

.tutorial-background {
  background-color: #EDF7FF;
}

.line {
  background-color: black;
  margin-bottom: 15px;
  height: 0.005rem;
}

.bottom {
  padding-bottom: 15px;
}

.landingTop {
  background-image: url("https://images.unsplash.com/photo-1479947119049-7342c14b8122?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80%22");
  height: 600px;
  background-size: cover;
  background-position: center;
}

.landingBottom {
  background-color: white;
  height: 300px;
}

.heading {
  width: 100%;
  font-family: SansSerif, serif;
}

.landingButtons{
  margin: 30px;
}

p {
  font-family: 'Poppins', serif;
  font-size: 17px;
}

.ui.big.label.ohagreen{
  background-color: #82AB33;
  color: white;
}

.ui.tiny.basic.label.phonelabel{
  background-color: #82AB33 !important;
}

.phone.inverted.icon{
  margin: 0 0.05em 0 0.05em !important;
}

.chat.inverted.icon{
  margin: 0 0.05em 0 0.05em !important;
}

